--- a/java/pom.xml
+++ b/java/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aliyun</groupId>
     <artifactId>tea-openapi</artifactId>
-    <version>0.0.4</version>
+    <version>0.0.5</version>
     <packaging>jar</packaging>
     <name>tea-openapi</name>
     <description>
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>openapiutil</artifactId>
-            <version>0.0.2</version>
+            <version>[0.0.3, 1.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
