--- a/csharp/core/client.csproj
+++ b/csharp/core/client.csproj
@@ -9,6 +9,12 @@
     <AssemblyName>AlibabaCloud.OpenApiClient</AssemblyName>
     <Version>0.0.11</Version>
     <LangVersion>5</LangVersion>
+    <Authors>Alibaba Cloud</Authors>
+    <Description>Alibaba Cloud OpenApi SDK Library for .NET</Description>
+    <PackageTags>Alibaba Aliyun OpenApi SDK</PackageTags>
+    <Copyright>©2009-present Alibaba Cloud</Copyright>
+    <PackageProjectUrl>https://github.com/aliyun/darabonba-openapi</PackageProjectUrl>
+    <PackageIconUrl>https://www.alibabacloud.com/favicon.ico</PackageIconUrl>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
     <DefineConstants>NETSTANDARD2_0</DefineConstants>
@@ -36,7 +42,7 @@
     </PackageReference>
     <PackageReference Include="AlibabaCloud.TeaUtil" Version="0.1.11"/>
     <PackageReference Include="Aliyun.Credentials" Version="1.3.1"/>
-    <PackageReference Include="AlibabaCloud.OpenApiUtil" Version="1.0.7"/>
-    <PackageReference Include="Tea" Version="1.0.9"/>
+    <PackageReference Include="AlibabaCloud.OpenApiUtil" Version="1.0.8"/>
+    <PackageReference Include="Tea" Version="1.0.11"/>
   </ItemGroup>
 </Project>
