--- a/java/pom.xml
+++ b/java/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>tea</artifactId>
             <version>1.1.14</version>
         </dependency>
+        <dependency>
+          <groupId>com.aliyun</groupId>
+          <artifactId>alibabacloud-gateway-spi</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
     </dependencies>
     <build>
         <plugins>
