--- a/java/pom.xml
+++ b/java/pom.xml
@@ -75,7 +75,7 @@
         <dependency>
           <groupId>com.aliyun</groupId>
           <artifactId>alibabacloud-gateway-spi</artifactId>
-          <version>0.0.1-SNAPSHOT</version>
+          <version>0.0.1</version>
       </dependency>
     </dependencies>
     <build>
