--- a/php/composer.json
+++ b/php/composer.json
@@ -13,7 +13,8 @@
     "php": ">5.5",
     "alibabacloud/tea-utils": "^0.2.0",
     "alibabacloud/credentials": "^1.1",
-    "alibabacloud/openapi-util": "^0.1.9"
+    "alibabacloud/openapi-util": "^0.1.10",
+    "alibabacloud/gateway-spi": "^0.0.1"
   },
   "autoload": {
     "psr-4": {
