--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aliyun</groupId>
     <artifactId>tea-openapi</artifactId>
-    <version>0.2.0</version>
+    <version>0.2.1</version>
     <packaging>jar</packaging>
     <name>tea-openapi</name>
     <description>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>com.aliyun</groupId>
             <artifactId>tea</artifactId>
-            <version>1.1.14</version>
+            <version>[1.1.14, 2.0.0)</version>
         </dependency>
         <dependency>
             <groupId>com.aliyun</groupId>
