support xml response for pop

--- a/php/composer.json
+++ b/php/composer.json
@@ -14,7 +14,8 @@
     "alibabacloud/tea-utils": "^0.2.0",
     "alibabacloud/credentials": "^1.1",
     "alibabacloud/openapi-util": "^0.1.10",
-    "alibabacloud/gateway-spi": "^0.0.1"
+    "alibabacloud/gateway-spi": "^0.0.1",
+    "alibabacloud/tea-xml": "^0.2"
   },
   "autoload": {
     "psr-4": {
