--- a/csharp/core/client.csproj
+++ b/csharp/core/client.csproj
@@ -45,5 +45,6 @@
     <PackageReference Include="AlibabaCloud.OpenApiUtil" Version="1.0.13"/>
     <PackageReference Include="Tea" Version="1.0.11"/>
     <PackageReference Include="AlibabaCloud.GatewaySpi" Version="0.0.1"/>
+    <PackageReference Include="AlibabaCloud.TeaXML" Version="0.0.3"/>
   </ItemGroup>
 </Project>
