--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aliyun</groupId>
     <artifactId>tea-openapi</artifactId>
@@ -41,9 +42,9 @@
         </repository>
     </distributionManagement>
     <scm>
-        <connection />
-        <developerConnection />
-        <url />
+        <connection/>
+        <developerConnection/>
+        <url/>
     </scm>
     <dependencies>
         <dependency>
@@ -76,6 +77,11 @@
             <groupId>com.aliyun</groupId>
             <artifactId>alibabacloud-gateway-spi</artifactId>
             <version>0.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>tea-xml</artifactId>
+            <version>0.1.4</version>
         </dependency>
     </dependencies>
     <build>
