--- a/java/pom.xml
+++ b/java/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>alibabacloud-gateway-spi</artifactId>
             <version>0.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>tea-xml</artifactId>
+            <version>0.1.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
