--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
+        java: [7, 8, 9, 11, 12, 13, 14, 15, 16, 17]
 
     steps:
     - uses: actions/checkout@v2
