--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alicloud/openapi-client",
-  "version": "0.4.8",
+  "name": "@ali/openapi-client",
+  "version": "0.0.8",
   "description": "",
   "main": "dist/client.js",
   "scripts": {
@@ -23,8 +23,8 @@
     "typescript": "^3.7.5"
   },
   "dependencies": {
-    "@alicloud/tea-typescript": "^1.7.1",
-    "@alicloud/tea-util": "^1.4.7",
+    "@ali/tea-typescript": "^2.0.1",
+    "@ali/tea-util": "^1.0.3",
     "@alicloud/credentials": "^2",
     "@alicloud/openapi-util": "^0.3.2",
     "@alicloud/gateway-spi": "^0.0.8",
@@ -33,5 +33,9 @@
   "files": [
     "dist",
     "src"
-  ]
+  ],
+  "publishConfig": {
+    "registry": "https://registry.anpm.alibaba-inc.com"
+  },
+  "repository": "git@github.com:aliyun/darabonba-openapi.git"
 }
