--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -17,6 +17,7 @@ jobs:
 
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
         java: [7, 8, 9, 11, 12, 13, 14, 15, 16, 17]
