--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -30,3 +30,8 @@ jobs:
         java-version: ${{ matrix.java }}
     - name: Test
       run: mvn test -B
+    - uses: codecov/codecov-action@v4
+      with:
+        flags: java # optional
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
