--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -28,3 +28,8 @@ jobs:
     - name: Test with unittest
       run: |
         coverage run --source="./alibabacloud_tea_openapi" -m pytest tests/test_*
+    - uses: codecov/codecov-action@v4
+      with:
+        flags: python # optional
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
