--- a/.github/workflows/ts.yml
+++ b/.github/workflows/ts.yml
@@ -26,4 +26,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run ci
+    - run: npm run test-cov
+    - uses: codecov/codecov-action@v4
+      with:
+        flags: typescript # optional
