--- a/ts/package.json
+++ b/ts/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@alicloud/tea-typescript": "^1.7.1",
-    "@alicloud/tea-util": "^1.4.7",
+    "@alicloud/tea-util": "^1.4.8",
     "@alicloud/credentials": "^2",
     "@alicloud/openapi-util": "^0.3.2",
     "@alicloud/gateway-spi": "^0.0.8",
@@ -33,5 +33,6 @@
   "files": [
     "dist",
     "src"
-  ]
+  ],
+  "repository": "git@github.com:aliyun/darabonba-openapi.git"
 }
