--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,5 +37,4 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         flags: golang # optional
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
