--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [7, 8, 9, 11, 12, 13, 14, 15, 16, 17, 18, 19]
+        java: [7, 8, 11, 17]
 
     steps:
     - uses: actions/checkout@v2
@@ -33,5 +33,4 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         flags: java # optional
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
