--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,5 +31,4 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         flags: python # optional
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
