--- a/.github/workflows/ts.yml
+++ b/.github/workflows/ts.yml
@@ -30,5 +30,4 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         flags: typescript # optional
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
