--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -33,5 +33,4 @@ jobs:
     - uses: codecov/codecov-action@v4
       with:
         flags: java # optional
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        token: ${{ secrets.CODECOV_TOKEN }}
