--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -20,7 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         # test against latest update of each major Java version, as well as specific updates of LTS versions:
-        java: [7, 8, 11, 17]
+        java: [8, 11, 17]
 
     steps:
     - uses: actions/checkout@v2
