--- a/ts/package.json
+++ b/ts/package.json
@@ -18,7 +18,8 @@
     "nyc": "^15.0.0",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "@alicloud/gateway-pop": "0.0.6"
   },
   "dependencies": {
     "@alicloud/tea-typescript": "^1.7.1",
