--- a/csharp/core/client.csproj
+++ b/csharp/core/client.csproj
@@ -42,9 +42,10 @@
     </PackageReference>
     <PackageReference Include="AlibabaCloud.TeaUtil" Version="0.1.19"/>
     <PackageReference Include="Aliyun.Credentials" Version="1.4.2"/>
-    <PackageReference Include="AlibabaCloud.OpenApiUtil" Version="1.1.1"/>
+    <PackageReference Include="AlibabaCloud.OpenApiUtil" Version="1.1.2"/>
     <PackageReference Include="Tea" Version="1.0.13"/>
     <PackageReference Include="AlibabaCloud.GatewaySpi" Version="0.0.3"/>
     <PackageReference Include="AlibabaCloud.TeaXML" Version="0.0.5"/>
+    <PackageReference Include="Darabonba" Version="1.1.3"/>
   </ItemGroup>
 </Project>
