feat: support TLS minimum version

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 1.x ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, 1.x ]
 defaults:
   run:
     shell: bash
