--- a/.github/workflows/ts.yml
+++ b/.github/workflows/ts.yml
@@ -2,9 +2,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 1.x ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, 1.x ]
 defaults:
   run:
     shell: bash
