--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,7 +11,7 @@ defaults:
     working-directory: python
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
@@ -24,7 +24,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install alibabacloud-tea coverage pytest alibabacloud-tea-util alibabacloud_credentials alibabacloud_openapi_util alibabacloud_gateway_spi alibabacloud_tea_xml httpretty alibabacloud_gateway_pop aioresponses
+      run: pip install urllib3==1.26.20 alibabacloud-tea coverage pytest alibabacloud-tea-util alibabacloud_credentials==1.0rc2 alibabacloud_openapi_util alibabacloud_gateway_spi==0.0.3 alibabacloud_tea_xml httpretty alibabacloud_gateway_pop==0.0.7 aioresponses
     - name: Test with unittest
       run: |
         coverage run --source="./alibabacloud_tea_openapi" -m pytest tests/test_*
