--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,7 +24,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install urllib3==1.26.20 alibabacloud-tea coverage pytest alibabacloud-tea-util alibabacloud_credentials==1.0rc2 alibabacloud_openapi_util alibabacloud_gateway_spi==0.0.3 alibabacloud_tea_xml httpretty alibabacloud_gateway_pop==0.0.7 aioresponses
+      run: pip install urllib3==1.26.20 darabonba-core coverage pytest alibabacloud_credentials==1.0rc2 alibabacloud_gateway_spi==0.0.3 httpretty alibabacloud_gateway_pop==0.0.7 aioresponses
     - name: Test with unittest
       run: |
         coverage run --source="./alibabacloud_tea_openapi" -m pytest tests/test_*
