--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,11 +24,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
-      run: pip install urllib3==1.26.20 darabonba-core coverage pytest alibabacloud_credentials==1.0.0 alibabacloud_gateway_spi==0.0.3 httpretty alibabacloud_gateway_pop==0.0.7 aioresponses
+      run: pip install 'cryptography>=3.0.0, <45.0.0' urllib3==1.26.20 darabonba-core coverage pytest 'alibabacloud_credentials>=1.0.0' alibabacloud_gateway_spi==0.0.3 httpretty alibabacloud_gateway_pop==0.0.7 aioresponses
     - name: Test with unittest
       run: |
         coverage run --source="./alibabacloud_tea_openapi" -m pytest tests/test_*
     - uses: codecov/codecov-action@v4
       with:
-        flags: python # optional
+        flags: python
         token: ${{ secrets.CODECOV_TOKEN }}
