--- a/csharp/core/client.csproj
+++ b/csharp/core/client.csproj
@@ -7,7 +7,7 @@
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <AssemblyName>AlibabaCloud.OpenApiClient</AssemblyName>
-    <Version/>
+    <Version>0.2.0</Version>
     <LangVersion>5</LangVersion>
     <Authors>Alibaba Cloud</Authors>
     <Description>Alibaba Cloud OpenApi SDK Library for .NET</Description>
@@ -42,6 +42,6 @@
     </PackageReference>
     <PackageReference Include="Aliyun.Credentials" Version="1.5.0"/>
     <PackageReference Include="AlibabaCloud.GatewaySpi" Version="0.0.3"/>
-    <PackageReference Include="Darabonba" Version="1.0.0-preview.2"/> 
+    <PackageReference Include="Darabonba" Version="1.0.0"/> 
   </ItemGroup>
 </Project>
