--- a/java/pom.xml
+++ b/java/pom.xml
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>com.aliyun</groupId>
       <artifactId>tea</artifactId>
-      <version>[1.1.14, 2.0.0)</version>
+      <version>1.4.1</version>
     </dependency>
     <dependency>
       <groupId>com.aliyun</groupId>
