--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -3,8 +3,14 @@ name: Go CI
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'golang/**'
+      - '.github/workflows/go.yml'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'golang/**'
+      - '.github/workflows/go.yml'
 defaults:
   run:
     shell: bash
