--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -6,8 +6,14 @@ name: Java CI
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'java/**'
+      - '.github/workflows/java.yml'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'java/**'
+      - '.github/workflows/java.yml'
 defaults:
   run:
     shell: bash
