--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,8 +3,14 @@ name: PHP CI
 on:
   push:
     branches: [ master, main ]
+    paths:
+      - 'php/**'
+      - '.github/workflows/php.yml'
   pull_request:
     branches: [ master, main ]
+    paths:
+      - 'php/**'
+      - '.github/workflows/php.yml'
 
 defaults:
   run:
