--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -3,8 +3,14 @@ name: Python CI
 on:
   push:
     branches: [ master ]
+    paths:
+      - 'python/**'
+      - '.github/workflows/python.yml'
   pull_request:
     branches: [ master ]
+    paths:
+      - 'python/**'
+      - '.github/workflows/python.yml'
 defaults:
   run:
     shell: bash
