--- a/cpp/external/alibabacloud_credential/CMakeLists.txt
+++ b/cpp/external/alibabacloud_credential/CMakeLists.txt
@@ -13,15 +13,9 @@ else()
     CMAKE_ARGS
       -DENABLE_UNIT_TESTS:BOOL="0")
 
-  FetchContent_GetProperties(_alibabacloud_credential)
-  if(NOT _alibabacloud_credential_POPULATED)
-    FetchContent_Populate(_alibabacloud_credential)
-    message(STATUS "Added alibabacloud_credential source : ${_alibabacloud_credential_SOURCE_DIR}")
-    message(STATUS "Added alibabacloud_credential binary : ${_alibabacloud_credential_BINARY_DIR}")
-    add_subdirectory(
-      ${_alibabacloud_credential_SOURCE_DIR}
-      ${_alibabacloud_credential_BINARY_DIR}
-    )
-  endif()
-  target_include_directories(alibabacloud_open_api PRIVATE "${_alibabacloud_credential_SOURCE_DIR}/include")
+  FetchContent_MakeAvailable(_alibabacloud_credential)
+  message(STATUS "Added alibabacloud_credential source : ${_alibabacloud_credential_SOURCE_DIR}")
+  message(STATUS "Added alibabacloud_credential binary : ${_alibabacloud_credential_BINARY_DIR}")
+
+  target_include_directories(${PROJECT_NAME} PRIVATE "${_alibabacloud_credential_SOURCE_DIR}/include")
 endif()
