refactor(cpp): 重构build系统和代码依赖以提升兼容性和维护性
- 将CMake最低版本要求更新至3.13，改进编译选项管理和平台兼容性
- 统一并优化Windows和类Unix系统的编译和链接配置
- 采用位置无关代码(PIC)，支持静态与动态库灵活构建
- 调整依赖库alibabacloud_credential为alibabacloud_credentials，并更新相关CMakeLists
- 移除冗余依赖检测逻辑，改用更简洁有效的外部库查找和链接方式
- 规范并增强库目标属性和安装规则，改进CMake配置文件生成与导出
- 替换代码中Credential相关引用为Credentials，调整命名空间及对象引用
- 修正异常类型捕获由Darabonba::Exception改为Darabonba::DaraException，提高异常处理准确性
- 修改InterceptorContext中多个getter函数为const版本，防止返回可修改引用
- 实现Utils::convert函数对Model进行过滤Stream字段以防止序列化错误
- 增强代码注释，去除无用变量声明，提升代码可读性和健壮性

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,236 +1,173 @@
 
-cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
 
-project(alibabacloud_open_api_v2 VERSION "1.0.0")
+project(alibabacloud_open_api_v2 VERSION "1.0.0" LANGUAGES CXX)
 
-# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< General set up >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_EXTENSIONS OFF)
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Options >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
+option(BUILD_SHARED_LIBS "Build shared libraries" ON)
+option(BUILD_UNIT_TESTS "Build unit tests" OFF)
+option(ENABLE_UNIT_TESTS "Enable unit tests" OFF)
+option(ENABLE_RTTI "Enable Run-Time Type Information" ON)
+option(MINIMIZE_SIZE "Minimize binary size (may affect performance)" OFF)
+
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< C++ Standard >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
+if(NOT CMAKE_CXX_STANDARD)
+    set(CMAKE_CXX_STANDARD 11)
+endif()
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/${PROJECT_NAME}_build")
-SET(CMAKE_FIND_LIBRARY_SUFFIXES "${CMAKE_FIND_LIBRARY_SUFFIXES}" "_d.dylib")
-message("C++ compiler flags: ${CMAKE_CXX_FLAGS}")
+set(CMAKE_CXX_EXTENSIONS OFF)
 
-if (CMAKE_CXX_COMPILER_LOADED)
-    message(STATUS "The C++ compiler ID is: ${CMAKE_CXX_COMPILER_ID}")
-    message(STATUS "The C++ compiler version is: ${CMAKE_CXX_COMPILER_VERSION}")
-endif ()
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Platform Setup >>>>>>>>>>>>>>>>>>>>>>>>>>>> #
+if(MSVC)
+  # Standardize MSVC runtime (MD/MDd for shared, MT/MTd for static)
+  add_definitions(-D_CRT_SECURE_NO_WARNINGS -DNOMINMAX)
+  add_compile_options(/W4 /WX /Zc:__cplusplus /utf-8)
+  
+  # Runtime library selection
+  if(BUILD_SHARED_LIBS)
+    # Use dynamic runtime for shared libraries
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")
+  else()
+    # Use static runtime for static libraries
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+  endif()
+else()
+  # Base warning flags (apply to all targets including dependencies)
+  add_compile_options(-Wall -Wextra -Wpedantic)
+  # Enable additional deprecation warnings for better C++ compliance
+  add_compile_options(-Wdeprecated -Wdeprecated-copy)
+  
+  # RTTI control for GCC/Clang
+  if(NOT ENABLE_RTTI)
+    add_compile_options(-fno-rtti)
+  endif()
+  
+  # Size optimization
+  if(MINIMIZE_SIZE)
+    add_compile_options(-Os -ffunction-sections -fdata-sections)
+    if(NOT APPLE)
+      set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--gc-sections")
+      set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--gc-sections")
+    endif()
+  endif()
+endif()
 
-if (NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
-endif ()
-message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+# For static builds, prefer static OpenSSL but use dynamic curl
+# Note: Static libcurl on Ubuntu has too many transitive dependencies (nghttp2, ssh, psl, 
+# gssapi, rtmp, idn2, unistring, etc.) that make full static linking impractical.
+# If you need fully static builds, compile a minimal libcurl yourself or use vcpkg.
+if(NOT BUILD_SHARED_LIBS)
+  set(OPENSSL_USE_STATIC_LIBS ON)
+  # Don't set CURL_STATICLIB or CMAKE_FIND_LIBRARY_SUFFIXES - use dynamic libcurl
+endif()
 
-# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Target set up >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #=
-include_directories(${CMAKE_SOURCE_DIR}/include)
+# Position Independent Code - Required for static libraries that may be linked into shared libraries
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
-set(SOURCE_FILES
-        src/Client.cpp
-        src/Utils.cpp
-        src/POP.cpp)
-
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
-        
-target_include_directories(${PROJECT_NAME}
-        PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
-set_target_properties(${PROJECT_NAME}
-        PROPERTIES
-        POSITION_INDEPENDENT_CODE 1
-        SOVERSION ${PROJECT_VERSION_MAJOR}
-        OUTPUT_NAME "${PROJECT_NAME}"
-        DEBUG_POSTFIX "_d"
-        PUBLIC_HEADER "${headers}"
-        MACOSX_RPATH ON
-        WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
-# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< External set up >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
-add_subdirectory(external)
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Dependencies >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
 find_package(OpenSSL REQUIRED)
+find_package(CURL REQUIRED)
 
-if(CMAKE_HOST_WIN32)
-    # On Windows, use vcpkg-installed curl
-    find_package(CURL REQUIRED)
-    target_link_libraries(${PROJECT_NAME}
-            OpenSSL::SSL OpenSSL::Crypto
-            CURL::libcurl
-            Crypt32
-            Rpcrt4
-            Ws2_32
-            darabonba_core
-            alibabacloud_credential
-            )
-    target_compile_definitions(${PROJECT_NAME}
-            PRIVATE _CRT_SECURE_NO_WARNINGS)
-elseif(APPLE)
-    find_package(CURL REQUIRED)
-    find_library(CFLIB CoreFoundation)
-    find_library(UTIL_LIB alibabacloud_open_api_v2 ${CMAKE_CURRENT_SOURCE_DIR}/deps/lib)
-    target_link_libraries(${PROJECT_NAME} 
-        OpenSSL::SSL OpenSSL::Crypto
-        ${CFLIB}
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Target Setup >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
+set(SOURCE_FILES
+    src/Client.cpp
+    src/Utils.cpp
+    src/POP.cpp
+)
+
+# Create library target
+add_library(${PROJECT_NAME} ${SOURCE_FILES})
+
+# Add external dependencies
+add_subdirectory(external)
+
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Include & Link >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
+
+target_include_directories(${PROJECT_NAME}
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
+
+target_link_libraries(${PROJECT_NAME}
+    PUBLIC
         CURL::libcurl
+        OpenSSL::SSL
+        OpenSSL::Crypto
         darabonba_core
-        alibabacloud_credential
-        )
-    target_compile_definitions(${PROJECT_NAME} PRIVATE GUID_CFUUID)
-else()
-    find_package(CURL REQUIRED)
-    target_link_libraries(${PROJECT_NAME} 
-        OpenSSL::SSL OpenSSL::Crypto
-        CURL::libcurl
-        darabonba_core
-        alibabacloud_credential
-        )
+        alibabacloud_credentials
+)
+
+# Windows compatibility
+if(WIN32)
+  target_link_libraries(${PROJECT_NAME} PUBLIC Crypt32 Rpcrt4 Ws2_32)
+  set_target_properties(${PROJECT_NAME} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS ON)
+  
+  # Suppress LNK4197 warning: vtable exported multiple times
+  # This is safe when building DLLs with multiple translation units
+  if(MSVC AND BUILD_SHARED_LIBS)
+    target_link_options(${PROJECT_NAME} PRIVATE /ignore:4197)
+  endif()
 endif()
 
+# Set target properties
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    SOVERSION ${PROJECT_VERSION_MAJOR}
+    VERSION ${PROJECT_VERSION}
+    OUTPUT_NAME "${PROJECT_NAME}"
+    DEBUG_POSTFIX "_d"
+    MACOSX_RPATH ON
+)
 
-# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Install set up >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
-message(STATUS "${PROJECT_NAME} : Project will be installed to ${CMAKE_INSTALL_PREFIX}")
+# Strict warning treatment for our own code only
+if(NOT MSVC)
+  target_compile_options(${PROJECT_NAME} PRIVATE -Werror)
+else()
+  target_compile_options(${PROJECT_NAME} PRIVATE /WX)
+endif()
 
+# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Installation >>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
 include(GNUInstallDirs)
-
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_LIBDIR})
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/${CMAKE_INSTALL_BINDIR})
-
-set(INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR} CACHE PATH "Installation directory for libraries")
-set(INSTALL_BINDIR ${CMAKE_INSTALL_BINDIR} CACHE PATH "Installation directory for executables")
-set(INSTALL_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR} CACHE PATH "Installation directory for header files")
-if(WIN32 AND NOT CYGWIN)
-    set(DEF_INSTALL_CMAKEDIR CMake)
-else()
-    set(DEF_INSTALL_CMAKEDIR share/cmake/${PROJECT_NAME})
-endif()
-set(INSTALL_CMAKEDIR ${DEF_INSTALL_CMAKEDIR} CACHE PATH "Installation directory for CMake files")
-
-foreach(p LIB BIN INCLUDE CMAKE)
-    file(TO_NATIVE_PATH ${CMAKE_INSTALL_PREFIX}/${INSTALL_${p}DIR} _path )
-    message(STATUS "Installing ${p} components to ${_path}")
-    unset(_path)
-endforeach()
-
-# Prepare RPATH
-file(RELATIVE_PATH _rel ${CMAKE_INSTALL_PREFIX}/${INSTALL_BINDIR} ${CMAKE_INSTALL_PREFIX})
-if(APPLE)
-    set(_rpath "@loader_path/${_rel}")
-else()
-    set(_rpath "\$ORIGIN/${_rel}")
-endif()
-file(TO_NATIVE_PATH "${_rpath}/${INSTALL_LIBDIR}" install_RPATH)
-
-set_target_properties(${PROJECT_NAME}
-        PROPERTIES
-        MACOSX_RPATH ON
-        SKIP_BUILD_RPATH OFF
-        BUILD_WITH_INSTALL_RPATH OFF
-        INSTALL_RPATH "${install_RPATH}"
-        INSTALL_RPATH_USE_LINK_PATH ON)
-
-install(
-        TARGETS
-        ${PROJECT_NAME}
-        EXPORT
-        alibabacloud_open_api_v2Targets
-        ARCHIVE
-        DESTINATION ${INSTALL_LIBDIR}
-        COMPONENT lib
-        RUNTIME
-        DESTINATION ${INSTALL_BINDIR}
-        COMPONENT bin
-        LIBRARY
-        DESTINATION ${INSTALL_LIBDIR}
-        COMPONENT lib
-        PUBLIC_HEADER
-        DESTINATION ${INSTALL_INCLUDEDIR}/alibabacloud
-        COMPONENT dev
-)
-
-# Install cmake config
-install(
-        EXPORT
-        alibabacloud_open_api_v2Targets
-        NAMESPACE
-        "alibabacloud_open_api_v2::"
-        DESTINATION
-        ${INSTALL_CMAKEDIR}
-        COMPONENT
-        dev
-)
 include(CMakePackageConfigHelpers)
 
+set(INSTALL_CMAKEDIR ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
+
+# Install library and headers
+install(TARGETS ${PROJECT_NAME}
+    EXPORT ${PROJECT_NAME}Targets
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+install(DIRECTORY include/
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+
+# Export targets
+install(EXPORT ${PROJECT_NAME}Targets
+    NAMESPACE ${PROJECT_NAME}::
+    DESTINATION ${INSTALL_CMAKEDIR}
+)
+
+# Generate version file
 write_basic_package_version_file(
-        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
-        VERSION ${PROJECT_VERSION}
-        COMPATIBILITY SameMajorVersion
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    VERSION ${PROJECT_VERSION}
+    COMPATIBILITY SameMajorVersion
 )
+
+# Configure Config file from template
 configure_package_config_file(
-        ${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in
-        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
-        INSTALL_DESTINATION ${INSTALL_CMAKEDIR}
-)
-install(
-        FILES
-        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake
-        ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake
-        DESTINATION
-        ${INSTALL_CMAKEDIR}
+    "${PROJECT_SOURCE_DIR}/cmake/${PROJECT_NAME}Config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    INSTALL_DESTINATION ${INSTALL_CMAKEDIR}
 )
 
-# <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< Test set up >>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>> #
-option(BUILD_TESTS "Build test programs" ON)
-
-if(BUILD_TESTS)
-    enable_testing()
-    
-    # Try to find GoogleTest locally first
-    find_package(GTest QUIET)
-    
-    if(NOT GTest_FOUND)
-        # Fetch GoogleTest if not found
-        include(FetchContent)
-        FetchContent_Declare(
-            googletest
-            GIT_REPOSITORY https://github.com/google/googletest.git
-            GIT_TAG v1.14.0
-        )
-        # For Windows: Prevent overriding the parent project's compiler/linker settings
-        set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-        FetchContent_MakeAvailable(googletest)
-    endif()
-    
-    # Create test executable
-    add_executable(test_utils tests/test_utils.cpp)
-    
-    # Add dependencies first
-    add_dependencies(test_utils ${PROJECT_NAME} darabonba_core alibabacloud_credential)
-    
-    target_include_directories(test_utils PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_BINARY_DIR}/_deps/_darabonba_core-src/include
-        ${CMAKE_CURRENT_BINARY_DIR}/_deps/_alibabacloud_credential-src/include
-    )
-    
-    if(GTest_FOUND)
-        target_link_libraries(test_utils
-            ${PROJECT_NAME}
-            darabonba_core
-            alibabacloud_credential
-            GTest::gtest
-            GTest::gtest_main
-        )
-    else()
-        target_link_libraries(test_utils
-            ${PROJECT_NAME}
-            darabonba_core
-            alibabacloud_credential
-            gtest
-            gtest_main
-        )
-    endif()
-    
-    # Add test to CTest
-    add_test(NAME UtilsTest COMMAND test_utils)
-endif()
+# Install config files
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+    DESTINATION ${INSTALL_CMAKEDIR}
+)
